fix svg on mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -118,16 +118,7 @@
   color: var(--color-text);
   text-decoration: none;
 
-  & svg {
-    background-color: red;
-    display: block;
-    margin-inline: auto;
-    fill: var(--color-text);
-  }
-
-
-
-  &:hover, &:hover svg {
+  &:hover {
     color: var(--color-primary);
     fill: var(--color-primary);
   }
@@ -151,7 +142,15 @@
   border: 1px solid var(--color-text);
   border-radius: 50%;
 
-  &:hover {
+  & svg {
+    background-color: blue;
+    display: block;
+    margin-inline: auto;
+    fill: var(--color-text);
+  }
+
+  &:hover,  &:hover svg {
     border-color: var(--color-primary);
+    fill: var(--color-primary);
   }
 }
